--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,15 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+body{
+  background-image: url(" https://www.bing.com/th?id=OHR.Godafoss_EN-IN7332688888_1920x1080.jpg&rf=LaDigue_1920x1080.jpg");
+  background-repeat: no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
