--- a/src/BingPage.css
+++ b/src/BingPage.css
@@ -26,27 +26,27 @@
     border-radius:50%;
 }
 .search{
-    display:flex;
-    gap:5px;
-    width:30%;
-    padding-left: 5%;
-    padding-right: 5%;
-    border-radius:20px;
-    margin-left: 30%;
+    display: flex;
+    gap: 5px;
+    width: 48%;
+    border-radius: 20px;
+    margin-left: 25%;
+    margin-top:2%;
     background:white;
-    height:50px;
+    height: 50px;
+
 }
 .search>img{
     width:7%;
     float:right;
 }
 .input{
-    border:none;
-    background:white;
-    border-color: white;
-    margin-left:3%;
-    width:90%;
-    margin-right:45%
+    border: none;
+    color: black;
+    background: white;
+    margin-left: 3%;
+    margin-right: 45%;
+
 }
 .box{
     clear:both;
